updated fitting to include loss for poisson statistics

--- a/bin/fnode_readout_analysis.ipynb
+++ b/bin/fnode_readout_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -29,24 +29,89 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data at: 2018_05_09/2018_05_09_14_57_39_collisionak-retention-24ms/results.hdf5\n",
+      "data at: 2018_05_14/2018_05_14_15_01_51_ro-high-stat/results.hdf5\n",
       "ivars: []\n",
+      "(0, 0)\n",
+      "[  2.50986912e-01   2.57925694e+02   2.39552067e+02]\n",
+      "cuts: [367]\n",
+      "initial fit succeeded with parameters: [  2.50986912e-01   2.57925694e+02   2.39552067e+02]\n",
+      "`x0` is infeasible.\n",
+      "There may be some issue with your guess: `[0.25098691191372996, 12.896284712915767, -0.91868137764756452, 0.0050000000000000001]`\n",
+      "(1, 0)\n",
+      "[ 0.20944027  0.91949831  4.8447548 ]\n",
+      "cuts: [4]\n",
+      "initial fit succeeded with parameters: [ 0.20944027  0.91949831  4.8447548 ]\n",
+      "[  0.27393976   1.74783264  11.58326485   1.57383638]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.py\", line 560, in fit_loss\n",
+      "    bounds=[(0,0,0,0),(1, np.inf, np.inf, np.inf)]\n",
+      "  File \"/usr/local/lib/python2.7/dist-packages/scipy/optimize/minpack.py\", line 753, in curve_fit\n",
+      "    **kwargs)\n",
+      "  File \"/usr/local/lib/python2.7/dist-packages/scipy/optimize/_lsq/least_squares.py\", line 787, in least_squares\n",
+      "    raise ValueError(\"`x0` is infeasible.\")\n",
+      "ValueError: `x0` is infeasible.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 1)\n",
+      "[  2.24413315e-01   2.53367886e+02   2.79197157e+02]\n",
+      "cuts: [378]\n",
+      "initial fit succeeded with parameters: [  2.24413315e-01   2.53367886e+02   2.79197157e+02]\n",
+      "Residuals are not finite in the initial point.\n",
+      "There may be some issue with your guess: `[0.22441331500616657, 12.668394280027004, 1.291463580900124, 0.0050000000000000001]`\n",
+      "(1, 1)\n",
+      "[ 0.15652418  0.34033518  9.33030459]\n",
+      "cuts: [4]\n",
+      "initial fit succeeded with parameters: [ 0.15652418  0.34033518  9.33030459]\n",
+      "[  0.17076393   0.66133126  19.72326659   0.62232105]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.py\", line 560, in fit_loss\n",
+      "    bounds=[(0,0,0,0),(1, np.inf, np.inf, np.inf)]\n",
+      "  File \"/usr/local/lib/python2.7/dist-packages/scipy/optimize/minpack.py\", line 753, in curve_fit\n",
+      "    **kwargs)\n",
+      "  File \"/usr/local/lib/python2.7/dist-packages/scipy/optimize/_lsq/least_squares.py\", line 805, in least_squares\n",
+      "    raise ValueError(\"Residuals are not finite in the initial point.\")\n",
+      "ValueError: Residuals are not finite in the initial point.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 2)\n",
       "On entry to DGESDD parameter number 5 had an illegal value\n",
-      "There may be some issue with your guess: `[  3.32900457e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "There may be some issue with your guess: `[  1.33200123e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "cuts: [nan]\n",
+      "(1, 2)\n",
       "On entry to DGESDD parameter number 5 had an illegal value\n",
-      "There may be some issue with your guess: `[  3.32900457e-18   0.00000000e+00   0.00000000e+00]`\n",
-      "no loading observed\n",
-      "ivar:\t0.0\tretention:\t0.852(15)\t0.874(15)\n",
+      "There may be some issue with your guess: `[  1.33200123e-18   0.00000000e+00   0.00000000e+00]`\n",
+      "cuts: [nan]\n",
+      "ivar:\t0.0\tretention:\t0.358(13)\t0.666(13)\n",
       "------------------------------\n",
-      "cs_s0:\tbg: 105.77\tsig: 54.9\tcut: 135\tload: 0.189664\n",
-      "cs_s1:\tbg: 0.08\tsig: 6.7\tcut: 2  \tload: 0.139032\n",
-      "rb_s0:\tbg: 55.88\tsig: 48.7\tcut: 80 \tload: 0.200568\n",
-      "rb_s1:\tbg: 0.17\tsig: 6.8\tcut: 3  \tload: 0.166452\n"
+      "cs_s0:\tbg: 257.93\tsig: 239.6\tcut: 367\tload: 0.250987\n",
+      "cs_s1:\tbg: 1.75\tsig: 11.6\tcut: 7  \tload: 0.273940\n",
+      "rb_s0:\tbg: 253.37\tsig: 279.2\tcut: 378\tload: 0.224413\n",
+      "rb_s1:\tbg: 0.66\tsig: 19.7\tcut: 7  \tload: 0.170764\n"
      ]
     }
    ],
    "source": [
-    "exp_name = ''\n",
+    "exp_name = '2018_05_14_15_01_51_ro-high-stat'\n",
     "# exp_name = ''\n",
     "if exp_name:\n",
     "    exp_date = '_'.join(exp_name.split('_')[:3])\n",
@@ -66,7 +131,7 @@
     "# rb_cuts = [[120],[4]]\n",
     "# q.set_thresholds(cs_cuts, roi=0)\n",
     "# q.set_thresholds(rb_cuts, roi=1)\n",
-    "retention = q.apply_thresholds()\n",
+    "retention = q.apply_thresholds(exclude_rois=[2])\n",
     "cuts = q.get_thresholds()\n",
     "roi_map = ['cs', 'rb']\n",
     "\n",
@@ -95,7 +160,7 @@
     "            roi_map[r], \n",
     "            s, \n",
     "            results[r][s]['fit_params'][1], \n",
-    "            results[r][s]['fit_params'][2]-results[r][s]['fit_params'][1], \n",
+    "            results[r][s]['fit_params'][2], \n",
     "            results[r][s]['cuts'][0],\n",
     "            results[r][s]['fit_params'][0]\n",
     "        ))"
@@ -103,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -111,7 +176,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36ed47991e754d98a6b4207eee789019",
+       "model_id": "d434885492a848fa97965b6191351e72",
        "version_major": 2,
        "version_minor": 0
       },
@@ -136,6 +201,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  2.50986912e-01   2.57925694e+02   2.39552067e+02]\n",
+      "[  2.24413315e-01   2.53367886e+02   2.79197157e+02]\n",
+      "[  0.27393976   1.74783264  11.58326485   1.57383638   0.5       ]\n",
+      "[  0.17076393   0.66133126  19.72326659   0.62232105   0.5       ]\n"
+     ]
     }
    ],
    "source": [
@@ -152,7 +227,10 @@
     "                ax[s][r].axvline(x=xc, color='k', linestyle='--')\n",
     "            ax[s][r].axvline(x=cuts[r][s][i], color='r', linestyle='--')\n",
     "        if results[r][s]['fit_params'].shape[0]:\n",
-    "            ax[s][r].plot(xs+0.5, qdp.dblpoisson(xs, *results[r][s]['fit_params']))\n",
+    "            print(results[r][s]['fit_params'])\n",
+    "#             print(results[r][s]['guess'])\n",
+    "            ax[s][r].plot(xs+0.5, results[r][s]['function'](xs, *(results[r][s]['fit_params'])))\n",
+    "#             ax[s][r].plot(xs+0.5, results[r][s]['function'](xs, *(results[r][s]['guess'])))\n",
     "        if s >= 0:\n",
     "            ax[s][r].set_yscale('log', nonposy='clip')\n",
     "            ax[s][r].set_ylim(1e-4, 1e0)\n",
@@ -3096,6 +3174,132 @@
    ],
    "source": [
     "np.correlate(qd[:dps,0,1], qd[:dps,0,1], mode=\"same\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{u'CS_HF_shutter_delay_ms': 1.3999999999999999,\n",
+       " u'CS_HF_shutter_time_ms': 1.2,\n",
+       " u'Iq': -1.5,\n",
+       " u'Ix': 0.24073531652999999,\n",
+       " u'Ix_expt': 0.26546363000000001,\n",
+       " u'Ix_op': 0.23363186,\n",
+       " u'Ix_pgc': 0.17661790347299999,\n",
+       " u'Ix_read': 0.46609574383800001,\n",
+       " u'Ix_read_mz': 0.00055555555555599997,\n",
+       " u'Iy': -0.17841671972699999,\n",
+       " u'Iy_expt': -1.96848288,\n",
+       " u'Iy_op': 0.044093960000000001,\n",
+       " u'Iy_pgc': -0.074885315563999993,\n",
+       " u'Iy_read': 0.45207059999999999,\n",
+       " u'Iy_read_mz': -0.25999999999999995,\n",
+       " u'Iz': -0.27452035548600001,\n",
+       " u'Iz_expt': 0.40000000000000002,\n",
+       " u'Iz_op': 0.40000000000000002,\n",
+       " u'Iz_pgc': 0.076201182101300002,\n",
+       " u'Iz_read': -0.103222020001,\n",
+       " u'Iz_read_mz': -0.137166666667,\n",
+       " u'MXY_shutter_delay_ms': 1.714,\n",
+       " u'MXY_shutter_time_ms': 0.40000000000000002,\n",
+       " u'MZ2_shutter_delay_ms': 1.3999999999999999,\n",
+       " u'MZ2_shutter_time_ms': 0,\n",
+       " u'M_shutter_delay_ms': 1.3799999999999999,\n",
+       " u'M_shutter_time_ms': 1.0,\n",
+       " u'OP_shutter_delay_ms': 1.6299999999999999,\n",
+       " u'OP_shutter_time_ms': 1.2,\n",
+       " u'RB_HF_shutter_delay_ms': 0.97999999999999998,\n",
+       " u'RB_HF_shutter_time_ms': 0.81999999999999995,\n",
+       " u'SSRO': True,\n",
+       " u'chan': 'Bq1',\n",
+       " u'cs_d2_mot_amp': -0.050999999999999997,\n",
+       " u'cs_d2_mot_det': -2.3500000000000001,\n",
+       " u'cs_d2_pgc2_amp': -5.2412743335199998,\n",
+       " u'cs_d2_pgc2_det': -3.1807690185199999,\n",
+       " u'cs_d2_pgc_amp': -1.4963830677700001,\n",
+       " u'cs_d2_pgc_det': -6.01642151232,\n",
+       " u'cs_d2_read_amp': 0.218345086173,\n",
+       " u'cs_d2_read_det': -2.84789158237,\n",
+       " u'cs_d2_read_mz_amp': 5,\n",
+       " u'cs_d2_read_mz_det': 0.40000000000000002,\n",
+       " u'cs_mot_timing_offset': -0.20000000000000001,\n",
+       " u'cs_op_power': 10,\n",
+       " u'cs_qubit_freq_ghz': 9.1926317700000002,\n",
+       " u'cs_qubit_freq_offset_khz': -8.6921706099999998,\n",
+       " u'cs_rf_preamp_db': 16,\n",
+       " u'cs_uwave_freq': 5.474261714639816,\n",
+       " u'cs_uwave_gap_time_ms': 0,\n",
+       " u'cs_uwave_time_ms': 0.0,\n",
+       " u'cycle_time': 80.0,\n",
+       " u'dIx_pgc': 0.32755743959799999,\n",
+       " u'dIy_pgc': 0.81718821527700003,\n",
+       " u'dIz_pgc': 0.054839185123300001,\n",
+       " u'depump_hf': False,\n",
+       " u'drop_time': 10,\n",
+       " u'dump_fort_at_end': False,\n",
+       " u'exp_type': 0,\n",
+       " u'exra_readout_780': 5,\n",
+       " u'field_settle_time': 0.40000000000000002,\n",
+       " u'fort_drop_us': 6,\n",
+       " u'fort_exp': 0,\n",
+       " u'fort_low_pow': 0,\n",
+       " u'gap_time': 2.5,\n",
+       " u'iterator': 0,\n",
+       " u'measurement_bins': 40,\n",
+       " u'mot_cw_exp': 1,\n",
+       " u'mot_time': 38.700000000000003,\n",
+       " u'mot_timing_offset': 0.22550000000000001,\n",
+       " u'mot_tof_exp': 2,\n",
+       " u'op_chop_freq_MHz': 1.0,\n",
+       " u'op_time_ms': 0.10000000000000001,\n",
+       " u'op_timing_offset': -0.14000000000000001,\n",
+       " u'p_heating': False,\n",
+       " u'p_heating_duration': 0,\n",
+       " u'p_heating_freq': 0,\n",
+       " u'pgc2_amp_scan_offset': 0,\n",
+       " u'pgc2_det_scan_offset': 0,\n",
+       " u'pgc_time': 5,\n",
+       " u'phase': 'mot',\n",
+       " u'post_read_pgc_time': 1,\n",
+       " u'pulse_459': 0,\n",
+       " u'rb_d2_mot_amp': -8.5999999999999996,\n",
+       " u'rb_d2_mot_det': -2.7486523678400001,\n",
+       " u'rb_d2_pgc2_amp': -3.2033695957899999,\n",
+       " u'rb_d2_pgc2_det': -7.5448327129199999,\n",
+       " u'rb_d2_pgc_amp': -2.4824213321499999,\n",
+       " u'rb_d2_pgc_det': -8.0225240565899991,\n",
+       " u'rb_d2_read_amp': -11.173338814499999,\n",
+       " u'rb_d2_read_det': -2.8859549326299998,\n",
+       " u'rb_d2_read_mz_amp': -9.6500000000000004,\n",
+       " u'rb_d2_read_mz_det': 0.20000000000000001,\n",
+       " u'rb_qubit_freq_ghz': 6.8346826109999999,\n",
+       " u'rb_qubit_freq_offset_khz': -0.30308779000000002,\n",
+       " u'rb_uwave_freq': 5.0376297279922255,\n",
+       " u'rb_uwave_gap_time_ms': 0,\n",
+       " u'rb_uwave_power_dbm': 10,\n",
+       " u'rb_uwave_time_ms': 0.0,\n",
+       " u'readout_780': 0.5,\n",
+       " u'readout_chop_freq_MHz': 1.25,\n",
+       " u'test_mz_readout': False,\n",
+       " u'test_mz_readout_duration': 0,\n",
+       " u'throwaway_bin_duration': 0.01,\n",
+       " u'throwaway_bins': 3,\n",
+       " u'uwave_offset_khz': 0,\n",
+       " u'uwave_phase': 0}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q.experiments[0]['iterations'][0]['variables']"
    ]
   },
   {
