--- a/bin/fnode_retention_analysis-guassian.ipynb
+++ b/bin/fnode_retention_analysis-guassian.ipynb
@@ -31,36 +31,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "data at: 2018_05_12/2018_05_12_14_29_45_ssro-ix/results.hdf5\n",
       "name 'fort_exp' is not defined\n",
       "name 'rb_uwave_freq' is not defined\n",
-      "ivars: [u'Iy_read']\n",
-      "no loading observed\n",
-      "no loading observed\n",
-      "no loading observed\n",
-      "no loading observed\n",
-      "no loading observed\n",
-      "no loading observed\n",
-      "no loading observed\n",
-      "no loading observed\n",
-      "no loading observed\n",
-      "no loading observed\n",
-      "ivar: 0.1590\tcloading: 0.257\trloading: 0.120\t\tcretention: 0.934 +- 0.037\trretention: 0.642 +- 0.037\n",
-      "ivar: 0.1990\tcloading: 0.234\trloading: 0.148\t\tcretention: 0.910 +- 0.025\trretention: 0.851 +- 0.025\n",
-      "ivar: 0.2390\tcloading: 0.203\trloading: 0.139\t\tcretention: 0.926 +- 0.027\trretention: 0.820 +- 0.027\n",
-      "ivar: 0.2790\tcloading: 0.308\trloading: 0.144\t\tcretention: 0.958 +- 0.028\trretention: 0.806 +- 0.028\n",
-      "ivar: 0.3190\tcloading: 0.235\trloading: 0.147\t\tcretention: 0.915 +- 0.020\trretention: 0.905 +- 0.020\n",
-      "ivar: 0.3590\tcloading: 0.228\trloading: 0.141\t\tcretention: 0.934 +- 0.024\trretention: 0.872 +- 0.024\n",
-      "ivar: 0.3990\tcloading: 0.284\trloading: 0.178\t\tcretention: 0.838 +- 0.019\trretention: 0.893 +- 0.019\n",
-      "ivar: 0.4390\tcloading: 0.302\trloading: 0.150\t\tcretention: 0.851 +- 0.019\trretention: 0.920 +- 0.019\n",
-      "ivar: 0.4790\tcloading: 0.288\trloading: 0.140\t\tcretention: 0.931 +- 0.014\trretention: 0.957 +- 0.014\n",
-      "ivar: 0.5190\tcloading: 0.232\trloading: 0.200\t\tcretention: 0.948 +- 0.016\trretention: 0.925 +- 0.016\n",
-      "ivar: 0.5590\tcloading: 0.229\trloading: 0.194\t\tcretention: 0.921 +- 0.021\trretention: 0.866 +- 0.021\n"
+      "ivars: [u'Ix_read']\n",
+      "ivar: 0.1500\tcloading: 0.185\trloading: 0.210\t\tcretention: 0.889 +- 0.024\trretention: 0.664 +- 0.024\n",
+      "ivar: 0.1800\tcloading: 0.306\trloading: 0.181\t\tcretention: 0.897 +- 0.024\trretention: 0.566 +- 0.024\n",
+      "ivar: 0.2100\tcloading: 0.249\trloading: 0.175\t\tcretention: 0.913 +- 0.025\trretention: 0.625 +- 0.025\n",
+      "ivar: 0.2400\tcloading: 0.263\trloading: 0.188\t\tcretention: 0.829 +- 0.024\trretention: 0.669 +- 0.024\n",
+      "ivar: 0.2700\tcloading: 0.156\trloading: 0.211\t\tcretention: 0.926 +- 0.024\trretention: 0.668 +- 0.024\n",
+      "ivar: 0.3000\tcloading: 0.162\trloading: 0.224\t\tcretention: 0.836 +- 0.024\trretention: 0.681 +- 0.024\n",
+      "ivar: 0.3300\tcloading: 0.168\trloading: 0.246\t\tcretention: 0.816 +- 0.023\trretention: 0.737 +- 0.023\n",
+      "ivar: 0.3600\tcloading: 0.239\trloading: 0.198\t\tcretention: 0.865 +- 0.024\trretention: 0.674 +- 0.024\n",
+      "ivar: 0.3900\tcloading: 0.144\trloading: 0.182\t\tcretention: 0.820 +- 0.025\trretention: 0.635 +- 0.025\n",
+      "ivar: 0.4200\tcloading: 0.091\trloading: 0.241\t\tcretention: 0.773 +- 0.025\trretention: 0.668 +- 0.025\n",
+      "ivar: 0.4500\tcloading: 0.119\trloading: 0.199\t\tcretention: 0.807 +- 0.025\trretention: 0.589 +- 0.025\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.py:118: RuntimeWarning: overflow encountered in double_scalars\n",
+      "  errs[r] = (z/n[r].astype('float'))*np.sqrt(ns[r].astype('float')*(1.0-ns[r].astype('float')/n[r].astype('float')))\n",
+      "/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.py:118: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  errs[r] = (z/n[r].astype('float'))*np.sqrt(ns[r].astype('float')*(1.0-ns[r].astype('float')/n[r].astype('float')))\n",
+      "/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.py:275: RuntimeWarning: divide by zero encountered in divide\n",
+      "  e['iterations'][i]['retention'] = retention/loaded\n",
+      "/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.py:275: RuntimeWarning: invalid value encountered in divide\n",
+      "  e['iterations'][i]['retention'] = retention/loaded\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e9a7915a9d14b2bb044d14764ca36ca",
+       "model_id": "e62e23b8a9b74ac2b4f7348a1a53c43e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -90,8 +95,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal parameters not found: Number of calls to function has reached maxfev = 1000.\n",
-      "[ 141.33402298    0.4520706     5.49225684 -140.4072197 ]\n"
+      "[ 0.12100629  0.17134076  0.14960064  0.77290944]\n",
+      "[ 0.09410237  0.32041971 -0.05082406  0.61669192]\n"
      ]
     }
    ],
@@ -105,8 +110,8 @@
     "q = qdp.QDP(base_data_path=dp)\n",
     "q.load_data_file(experiment_file)\n",
     "print \"ivars: {}\".format(q.experiments[0]['variable_list'])\n",
-    "cs_cuts = [[170],[3]]\n",
-    "rb_cuts = [[110],[3]]\n",
+    "cs_cuts = [[400],[3]]\n",
+    "rb_cuts = [[300],[3]]\n",
     "q.set_thresholds(cs_cuts, roi=0)\n",
     "q.set_thresholds(rb_cuts, roi=1)\n",
     "retention = q.apply_thresholds(exclude_rois=exclude)\n",
@@ -165,7 +170,7 @@
     "                ax[i].plot(retention['ivar'][e, :, 0], retention[yvals][e, :, r], fmt_map[r])\n",
     "                \n",
     "        \n",
-    "    ax[i].set_ylim(0.8, 1)\n",
+    "    ax[i].set_ylim(0., 1)\n",
     "    ax[i].set_xlabel(xlab)\n",
     "    ax[i].set_ylabel(yvals)\n",
     "\n",
@@ -177,20 +182,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'plt' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-79a8e4a4b7cf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# plotting\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mfig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubplots\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfigsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubplots_adjust\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwspace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0myvals\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'retention'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'loading'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0me\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mretention\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'ivar'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'plt' is not defined"
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ca5c0e3528444271a43c4802e4779ff0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>FigureCanvasNbAgg</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in Jupyter Notebook or JupyterLab, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another notebook frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "FigureCanvasNbAgg()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ -3.01166383e+02  -3.14593595e-02  -5.04097583e+00   3.01966334e+02]\n",
+      "[-0.05794977 -0.0061385  -0.04389579  0.59028975]\n"
      ]
     }
    ],
